--- a/backend/ecom/store/templates/cart_summary.html
+++ b/backend/ecom/store/templates/cart_summary.html
@@ -11,6 +11,79 @@
                 </div>
             </div>
         </header>
+        <br/><br/>
+        <div class="container">
+          {% if cart_products %}
+             {% for product in cart_products %}
+             <div class="card mb-3">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                        <center>
+                      <h5 class="card-title">{{ product.name }}</h5>
+                      <p class="card-text">{{ product.description }}</p>
+        
+                      {% if product.is_sale %}
+        
+                      <div class="d-flex justify-content-center small text-warning mb-2">
+                        <div class="bi-star-fill"></div>
+                        &nbsp;&nbsp;Sale!!&nbsp;&nbsp;
+                        <div class="bi-star-fill"></div>
+                        </div>
+                        <!-- Product price-->
+                        <strike>
+                        ${{ product.price }}
+                        </strike>
+                        &nbsp;
+                        ${{ product.sale_price }}
+        
+                      {% else %}
+                        <!-- Product price-->
+                        ${{ product.price }}
+                        <br/>ID: {{product.id}}
+                      {% endif %}
+
+                      <br/><br/>
+
+                      <div class="d-flex justify-content-center mt-4">
+                        <select class="form-select form-select-sm w-25 mx-2" id="qty-cart">
+                              {% for key, value in quantities.items %}
+                                {% if key == product.id|slugify %}
+                                  <option selected> {{ value }}</option>
+                                {% endif %}
+
+                              {% endfor %}
+                            
+
+
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </div>
+
+                        <br/><br/>
+                        
+                      <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
+                        </center>
+                    </div>
+                  </div>
+                </div>
+              </div></br>
+
+             {% endfor %}
+             {% else %}
+             Your cart is empty...
+            </br></br></br></br></br></br>
+
+          {% endif %}
+        
+        </div>
 
 
        
