--- a/backend/ecom/store/templates/cart_summary.html
+++ b/backend/ecom/store/templates/cart_summary.html
@@ -49,7 +49,7 @@
                       <br/><br/>
 
                       <div class="d-flex justify-content-center mt-4">
-                        <select class="form-select form-select-sm w-25 mx-2" id="qty-cart">
+                        <select class="form-select form-select-sm w-25 mx-2" id="select{{product.id}}">
                               {% for key, value in quantities.items %}
                                 {% if key == product.id|slugify %}
                                   <option selected> {{ value }}</option>
@@ -70,6 +70,14 @@
                         <br/><br/>
                         
                       <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
+                      <button type="button" data-index="{{ product.id }}" class="btn btn-secondary update-cart">
+                        Update
+                    </button>
+                    <button type="button" data-index="{{ product.id }}" class="btn btn-danger delete-product">
+                      Remove from Cart
+                  </button>
+          
+
                         </center>
                     </div>
                   </div>
@@ -88,4 +96,135 @@
 
        
 </br></br></br></br></br></br>
-{% endblock %}
+
+<script>
+  //Update cart
+  $(document).ready(function() {
+      // Check if jQuery is loaded
+      if (typeof jQuery != 'undefined') {
+          console.log('jQuery is loaded');
+      } else {
+          console.error('jQuery is not loaded');
+      }
+  
+      $(document).on('click', '.update-cart', function(e){
+          e.preventDefault();
+          console.log('Update button clicked');
+  
+          //grab the product id
+          var productid = $(this).data('index');
+          console.log('Product ID:', productid);
+  
+          // Get the selected quantity
+          var productQty = $('#select' + productid + ' option:selected').text();
+          console.log('Selected Quantity:', productQty);
+  
+          $.ajax({
+              type: 'POST',
+              url: '{% url 'cart_update' %}',
+              data: {
+                  product_id: productid,
+                  product_qty: productQty,
+                  csrfmiddlewaretoken: '{{ csrf_token }}',
+                  action: 'post'
+              },
+              success: function(json) {
+                  console.log('AJAX request successful');
+                  location.reload();
+              },
+              error: function(xhr, errmsg, err) {
+                  console.error('AJAX Error:', errmsg);
+              }
+          });
+      });
+  });
+
+ //Delete item from cart
+ $(document).ready(function() {
+  // Check if jQuery is loaded
+  if (typeof jQuery != 'undefined') {
+      console.log('jQuery is loaded');
+  } else {
+      console.error('jQuery is not loaded');
+  }
+
+  $(document).on('click', '.delete-product', function(e){
+      e.preventDefault();
+      console.log('Update button clicked');
+
+      //grab the product id
+      var productid = $(this).data('index');
+      console.log('Product ID:', productid);
+
+      // Get the selected quantity
+      var productQty = $('#select' + productid + ' option:selected').text();
+
+      $.ajax({
+          type: 'POST',
+          url: '{% url 'cart_delete' %}',
+          data: {
+              product_id: productid,
+              csrfmiddlewaretoken: '{{ csrf_token }}',
+              action: 'post'
+          },
+          success: function(json) {
+              console.log('AJAX request successful');
+              location.reload();
+          },
+          error: function(xhr, errmsg, err) {
+              console.error('AJAX Error:', errmsg);
+          }
+      });
+  });
+});
+
+
+
+
+
+
+
+
+  </script>
+
+  {% endblock %}
+
+
+
+
+
+
+
+
+{% comment %} <script>
+  $(document).on('click', '.update-cart', function(e){
+      e.preventDefault();
+      //grab the product id
+      var productid = $(this).data('index');
+      console.log('Update button clicked for product:', productid);
+  
+      // Get the selected quantity
+      var productQty = $('#select' + productid + ' option:selected').text();
+  
+      $.ajax({
+          type: 'POST',
+          url: '{% url 'cart_update' %}',
+          data: {
+              product_id: productid,
+              product_qty: productQty,
+              csrfmiddlewaretoken: '{{ csrf_token }}',
+              action: 'post'
+          },
+          success: function(json) {
+              location.reload();
+          },
+          error: function(xhr, errmsg, err) {
+              console.error('AJAX Error:', errmsg);
+          }
+      });
+  });
+  </script>
+
+{% endblock %} {% endcomment %}
+
+
