Category summary working, cart total sales amount working.

--- a/backend/ecom/store/templates/category.html
+++ b/backend/ecom/store/templates/category.html
@@ -45,10 +45,10 @@
                                         </div>
                                         <!-- Product price-->
                                         <strike>
-                                        ${{ product.price }}
+                                        ZMK{{ product.price }}
                                         </strike>
                                         &nbsp;
-                                        ${{ product.sale_price }}
+                                        ZMK{{ product.sale_price }}
                                         <!-- Product description-->
                                     </div>
                                 </div>
