--- a/backend/ecom/store/templates/navbar.html
+++ b/backend/ecom/store/templates/navbar.html
@@ -47,7 +47,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <!-- All Products Link -->
                         <li>
-                            <a class="dropdown-item" href="{% url 'home' %}">All Products</a>
+                            <a class="dropdown-item" href="{% url 'category_summary' %}">All Products</a>
                         </li>
                         <!-- Divider -->
                         <li><hr class="dropdown-divider" /></li>
