--- a/backend/ecom/store/templates/cart_summary.html
+++ b/backend/ecom/store/templates/cart_summary.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load humanize %}
 
 {% block content %}
 
@@ -35,14 +36,14 @@
                         </div>
                         <!-- Product price-->
                         <strike>
-                        ${{ product.price }}
+                        ZMK {{ product.price }}
                         </strike>
                         &nbsp;
-                        ${{ product.sale_price }}
+                        ZMK {{ product.sale_price }}
         
                       {% else %}
                         <!-- Product price-->
-                        ${{ product.price }}
+                        ZMK {{ product.price }}
                         <br/>ID: {{product.id}}
                       {% endif %}
 
@@ -56,9 +57,6 @@
                                 {% endif %}
 
                               {% endfor %}
-                            
-
-
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -76,8 +74,6 @@
                     <button type="button" data-index="{{ product.id }}" class="btn btn-danger delete-product">
                       Remove from Cart
                   </button>
-          
-
                         </center>
                     </div>
                   </div>
@@ -85,6 +81,7 @@
               </div></br>
 
              {% endfor %}
+             <h3>Total: ZMK{{ total|floatformat:2|intcomma }}</h3>
              {% else %}
              Your cart is empty...
             </br></br></br></br></br></br>
