70% Completed status. Cart Persistance comeplete, User Profile Complete, Updating Profile information, search function, logout, pre-payment version.

--- a/backend/ecom/store/templates/navbar.html
+++ b/backend/ecom/store/templates/navbar.html
@@ -18,6 +18,10 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
 
+                <!-- Search Link -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'search' %}">Search</a>
+
                 <!-- About Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -25,6 +29,24 @@
 
                 <!-- Conditional Links Based on User Authentication -->
                 {% if user.is_authenticated %}
+                    
+                    <!-- Dropdown Menu for Profile Options -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Profile</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <!-- All Products Link -->
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'update_user' %}">User Profile</a>
+                                </li>
+                                <!-- Divider -->
+                                <li><hr class="dropdown-divider" /></li>
+                                <!-- Category Links -->
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'update_info' %}">User Information</a>
+                                </li>
+                                
+                            </ul>
+                        </li>
                     <!-- Logout Link (Visible if User is Logged In) -->
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
@@ -79,3 +101,4 @@
         </div>
     </div>
 </nav>
+
