--- a/backend/ecom/payment/templates/payment/not_shipped_dash.html
+++ b/backend/ecom/payment/templates/payment/not_shipped_dash.html
@@ -14,16 +14,28 @@
       <th scope="col">Price</th>
       <th scope="col">Customer Email</th>
       <th scope="col">Date Ordered</th>
+      <th scope="col">Shipping</th>
     </tr>
   </thead>
   <tbody>
 
     {% for item in orders %}
     <tr>
-      <td>{{ item.id }}</td>
+      <td><a href="{% url 'orders' item.id %}">{{ item.id }}<a/></td>
       <td>ZMK{{ item.amount_paid }}</td>
       <td>{{ item.email }}</td>
      <td>{{ item.date_ordered }}</td>
+     <td> 
+      <form method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="shipping_status" value="true">
+        <input type="hidden" name="num" value="{{ item.id }}">
+        <button type="submit "class="btn btn-success btn-sm">Mark as Shipped</button>
+
+      </form>
+      <td>
+    
+
     </tr>
     {% endfor %}
   </tbody>
