--- a/backend/ecom/payment/templates/payment/shipped_dash.html
+++ b/backend/ecom/payment/templates/payment/shipped_dash.html
@@ -14,16 +14,25 @@
       <th scope="col">Price</th>
       <th scope="col">Customer Email</th>
       <th scope="col">Date Shipped</th>
+      <th scope="col">Shipping</th
     </tr>
   </thead>
   <tbody>
 
     {% for item in orders %}
     <tr>
-      <td>{{ item.id }}</td>
+      <td><a href="{% url 'orders' item.id %}">{{ item.id }}</a></td>
       <td>ZMK{{ item.amount_paid }}</td>
       <td>{{ item.email }}</td>
      <td>{{ item.date_shipped }}</td>
+     <td>
+     <form method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="shipping_status" value="true">
+        <input type="hidden" name="num" value="{{ item.id }}">
+        <button type="submit "class="btn btn-danger btn-sm">Mark Unshipped</button>
+      </form>
+    </td>
     </tr>
     {% endfor %}
   </tbody>
